--- a/style2.css
+++ b/style2.css
@@ -31,18 +31,13 @@ html {
 a  {
 
   padding: 30px 30px 30px;
-
   margin: 0px;
-
   text-decoration: none;
-
   color: black;
-
   font-size: 20px;
-
   font-family: Arial, Helvetica, sans-serif;
-
   font-weight: 600;
+  transition: .2s;
 
 
 
@@ -234,3 +229,22 @@ img {
 
 
 }
+.primeiratelatxt {
+  position: relative;
+  animation: flutuar 2s ease-in-out infinite alternate;
+}
+a:hover {
+  transform: scale(1.05);
+  box-shadow: 1px 1px 18px rgba(10, 1, 148, 0.836);
+}
+
+
+
+@keyframes flutuar{
+  0% {
+    top: 0;
+
+  }
+  100%{
+    top: 30px;
+  }
